tests/parser/group-expression-error.stderr
error: expected expression
 --> $DIR/group-expression-error.lox:1:2
  |
1 | (/);
  |  ^
